--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,7 +4,7 @@ android {
     compileSdkVersion 27
     defaultConfig {
         applicationId "com.burhanrashid52.imageeditor"
-        minSdkVersion 14
+        minSdkVersion 15
         targetSdkVersion 27
         versionCode 1
         versionName "1.0"
@@ -30,6 +30,15 @@ dependencies {
     // dexter M permissions
     implementation 'com.karumi:dexter:4.1.0'
     implementation 'com.github.QuadFlask:colorpicker:0.0.13'
+
+    implementation 'info.androidhive:imagefilters:1.0.7'
+
+    // butter knife
+    implementation 'com.jakewharton:butterknife:8.8.1'
+    implementation 'com.soundcloud.android:android-crop:1.0.1@aar'
+    implementation 'com.theartofdev.edmodo:android-image-cropper:2.7.+'
+
+    annotationProcessor 'com.jakewharton:butterknife-compiler:8.8.1'
     implementation files('libs/android-retention-magic-1.2.2.jar')
     implementation files('libs/drawablepagertabstrip.jar')
 }
